# weather-dashboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  AGENTS.md  Dockerfile  README.md  codemap.md  config.yaml  docker-compose.yml  eslint.config.js  instruction.md  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.slim/: codemap.json
backend/: codemap.md  pyproject.toml  requirements.txt  weather.db
backend/app/: __init__.py  codemap.md  config.py  database.py  main.py  models.py  mqtt_client.py  ratelimit.py  schemas.py
backend/app/routers/: __init__.py  codemap.md  weather.py
backend/tests/: conftest.py  test_config.py  test_database.py  test_main.py  test_models.py  test_mqtt_client.py  test_ratelimit.py  test_routers.py  test_schemas.py
frontend/: app.js  codemap.md  index.html  manifest.json  service-worker.js  style.css
scripts/: codemap.md  set_version.sh
tests/backend/: conftest.py  test_config.py  test_database.py  test_main.py  test_models.py  test_mqtt_client.py  test_ratelimit.py  test_routers.py  test_schemas.py
tests/frontend/: app.test.js  setup.js
utils/: codemap.md  generate_icons.py
