[project]
name = "weather-dashboard"
version = "1.0.1"
requires-python = ">=3.14.0, <3.15"
dependencies = [
    "aiomqtt==2.5.1",
    "aiosqlite==0.22.1",
    "fastapi==0.138.0",
    "pydantic-settings==2.14.2",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.51",
    "uvicorn==0.49.0",
    "websockets==16.0",
]

[dependency-groups]
dev = [
  "prek==0.4.5",
  "ruff==0.15.18",
  "ty==0.0.52",
]

[tool.ruff]
target-version = "py314"

lint.select = ["ALL"]
lint.ignore = [
    "COM812",   # Trailing comma missing
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
]

[tool.ty.environment]
python-version = "3.14"
