[project]
name = "weather-dashboard-backend"
version = "1.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt==2.5.1",
    "aiosqlite==0.22.1",
    "fastapi==0.138.0",
    "pydantic-settings==2.14.2",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.51",
    "uvicorn==0.49.0",
    "websockets==16.0",
]
