[project]
name = "weather-dashboard-backend"
version = "1.0.0"
requires-python = ">=3.14.0, <3.15"
dependencies = [
    "aiomqtt==2.5.1",
    "aiosqlite==0.22.1",
    "fastapi==0.138.0",
    "pydantic-settings==2.14.2",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.51",
    "uvicorn==0.49.0",
    "websockets==16.0",
]

[dependency-groups]
dev = [
  "prek==0.4.5",
  "ruff==0.15.18",
  "ty==0.0.51",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D213",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.14"

[tool.ty.check]
typeCheckingMode = "strict"
